2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. 

2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Modify the stock GCC to better support C99's VLA's.

	The stock GNU compiler uses "stack probing" to allocate VLA's or
	large frames; where a loop is emitted to ensure all pages of the
	allocated space are touched in order, so that the OS can see it
	needs to grow the VM space for the process. We do not need this on
	the Microgrid, so remove it. Also GCC would use fixed register
	names in this loop, which breaks the alternate SL->MT code
	generator.
	
	* deploy/patches/alpha.c.patch: New.
	* deploy/rules/gcc.mk: Use it. 
	
	* deploy/patches/alpha.md.patch: Update.

2009-09-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. This is
	required to support "setemptyf".

2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* deploy/versions.mk.defaults: Bump version numbers. 

2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in `deploy'.
	
	* deploy/Makefile ($(PREFIX)/slenv): Ensure target is removed
	before copying.

2009-09-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase compatibility with Snow Leopard.
	
	* deploy/rules/binutils.mk: Disable -Werror when building
	binutils, as the newer GCC on Snow Leopard is getting overly
	pedantic.

2009-08-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `deploy' (again).
	
	* deploy/slenv: Remove `~poss/opt/bin' from PATH definition since
	this is now handled through the `slenv_local' helper.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `deploy'.
	
	* deploy/rules/sl.mk ($(SLDIR)/bin/slc): Pick up manpages from
	`tools/bin', not `doc'.

2009-08-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update `deploy'.
	
	* deploy/versions.mk.defaults (SLC_REV): Bump revision number to
	align with the MT-Alpha ISA change that happened in r2728, r2729,
	r2738.
